--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,12 +9,12 @@
 @layer utilities {
   @keyframes mesh-move-1 {
     0%, 100% { transform: translate(0, 0) scale(1); }
-    50% { transform: translate(-20%, -10%) scale(1.3); }
+    50% { transform: translate(-30%, -00%) scale(1.3); }
   }
 
   @keyframes mesh-move-2 {
-    0%, 100% { transform: translate(0, 0) scale(1); }
-    50% { transform: translate(20%, 10%) scale(1.3); }
+    0%, 100% { transform: translate(0, -80%) scale(1); }
+    50% { transform: translate(30%, 20%) scale(1.3); }
   }
 
   .animate-mesh-1 {
@@ -23,7 +23,7 @@
   }
 
   .animate-mesh-2 {
-    animation: mesh-move-2 15s ease-in-out infinite;
+    animation: mesh-move-2 10s ease-in-out infinite;
     background: radial-gradient(circle at center, #003300, #014d01, #00ff66);
   }
 }
